# C-Mini-Game

./: .gitignore  CMakeLists.txt  README.md  game.c  game.h
